Edited: solved the bug of showing scrollbar thumb when scrollbar doesn't show

--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
 /* For all browsers */
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
     width: 10px;
 }
 
-::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
     background-color: #D5E2FD;
 }
 
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
     background-color: #A4C1FD;
     border-radius: 100vw;
 }
 
-::-webkit-scrollbar-thumb:hover {
+body::-webkit-scrollbar-thumb:hover {
     background-color: #7596f0;
 }
 
